# financial-reports

./: README.md  README.org  app.py  data_extraction.py  pyproject.toml  requirements.txt
src/: data_extraction.py  portfolio.py
tests/: test_AI_2023.csv  test_AI_inception.csv  test_AI_ytd_2024.csv  tests_cashflows.csv  tests_scraping.py  unit_tests.py
