[tool.poetry]
name = "financial-reports"
version = "0.1.0"
description = ""
authors = ["CHAN Kevin <chan.kevin@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.31.0"
duckdb = "^0.9.2"
numpy = "^1.26.4"
attrs = "^23.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
